Try using anchor links instead of cites

--- a/content/05.introduction.md
+++ b/content/05.introduction.md
@@ -26,7 +26,7 @@ this from the perspective of the landscape of inquiry, the most startling
 realization is that the questions a computational tool enables
 individuals to ask shapes the questions they think to ask.
 
-In [@doi: 10.1088/0067-0049/192/1/9], the analysis platform `yt` was described.
+In [@doi:10.1088/0067-0049/192/1/9], the analysis platform `yt` was described.
 At the time, `yt` was focused on analyzing and visualizing the output of
 grid-based adaptive mesh refinement hydrodynamic simulations; while these were
 used to study many different physical phenomena, they all were laid out in
@@ -38,16 +38,16 @@ This has been the result of a large-scale effort to rewrite the underlying
 machinery within `yt` for accessing data, indexing that data, and providing it
 in efficient ways to higher-level routines, as discussed in Section Something.
 While this was underway, `yt` has also been considerably reinstrumented with
-metadata-aware array infrastructure (Section [@sec:units]), the volume
-rendering infrastructure has been rewritten to be more user-friendly and
-capable (Section [@sec:vr]), and support for non-Cartesian geometries has
-been added (Section [@sec:noncartesian]).
+[metadata-aware array infrastructure](#sec:units), the [volume
+rendering infrastructure](#sec:vr) has been rewritten to be more user-friendly and
+capable, and support for [non-Cartesian geometries](#sec:noncartesian) has
+been added.
 
 The single biggest change to `yt` since that paper was published has not been
 technical in nature.  In the intervening years, a directed and intense
 community-building effort has resulted in the contributions from over a hundred
-different individuals, many of them early-stage researchers, and a thriving
-community of both users and developers (Section [@sec:community]).  This is
+different individuals, many of them early-stage researchers, and a [thriving
+community of both users and developers](#sec:community).  This is
 the crowning achievement of development, as we have attempted to build `yt`
 into a tool that enables inquiry from a technical level as well as fosters a
 supportive, friendly community of individuals engaged in self-directed inquiry.
