--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -1,9 +1,9 @@
-## Development Procedure
+## Development Procedure {#sec:development}
 
 ### Answer Testing
 
 ### Code Review
 
-### YTEP Process
+### YTEP Process {#sec:ytep}
 
 
