--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -1,6 +1,6 @@
 ## Abstracting Simulation Types
 
-### Chunking and Decomposition Strategies}
+### Chunking and Decomposition Strategies
 
 Reading data, particularly data that will not be utilized in a computation, can
 incur susbtantial overhead, particularly if the data is spread over multiple
@@ -55,8 +55,8 @@ data.  For the cases of overlapping grids (either on the same or higher
 refinement levels) masks are generated that indicate which data is considered
 authoritative.
 
-As noted in Section[@sec:data_objects], the process of selecting points is
-multi-step, starting at coarse selection that may be at the file level, and
+As noted in [Data Objects](#sec:data_objects), the process of selecting points
+is multi-step, starting at coarse selection that may be at the file level, and
 proceeding to selection of specific data points that are included in a
 selector.  For grid-based data, the coarse selection stage proceeds in an
 extremely simple fashion, by iterating over flat arrays of left and right grid
@@ -71,9 +71,8 @@ occurs in essentially one location but to very high levels), as well as the
 specific selection process, impact the overall performance.  The second-stage
 selection occurs within individual grids, where points are selected based on
 the data point center.  In the case of cell-centered data, this returns an
-array of size $N$ where $N$ is the number of points selected; in the case of
-3D vertex-centered data, this would be $(N,8)$. **Andrew Myers: check
-this?**
+array of size $N$ where $N$ is the number of points selected; in the case of 3D
+vertex-centered data, this would be $(N,8)$. **Andrew Myers: check this?**
 
 Indexing grid data in `yt` is optimized for systems of grids that tend to have
 larger grid patches, rather than smaller; specifically, in `yt` each grid
@@ -86,7 +85,7 @@ To address both the memory overhead and the python overhead, as well as more
 generally address potential scalability issues with grid selection, we have
 begun implementation of a more sophisticated "grid visitors" indexing and
 selection method.  This draws on the approach used by the oct-visitors
-(described below in Section[@sec:octree_analysis]).  A spatial tree is
+(described [below](#sec:octree_analysis)).  A spatial tree is
 constructed, wherein parent/child relationships are established between grids.
 Each process -- selection, copying of data, generation of coordinates -- is
 represented by an instance of a `GridVisitor` object.  The tree is
@@ -109,6 +108,6 @@ selection.
 
 ### Unstructured Mesh Analysis
 
-### Non-Cartesian Coordinates
+### Non-Cartesian Coordinates {#sec:noncartesian}
 
 
