--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -1,4 +1,4 @@
-## Units and Quantities
+## Units and Quantities {#sec:units}
 
 At a basic level, `yt` is an engine for converting data dumped to disk
 by a simulation code into a physically meaningful result.  Attaching units to
@@ -12,7 +12,7 @@ symbolic math library `sympy`. Instead of returning a NumPy
 `ndarray` when users query `yt` data objects for fields, return a
 `YTArray`, a subclass of `ndarray`. `YTArray` preserves
 `ndarray`'s array operations, including deep and shallow copies,
-broadcasting, and views.  Augmenting texttt{ndarray}, `YTArray` attaches
+broadcasting, and views.  Augmenting `ndarray`, `YTArray` attaches
 unit metadata to the array data, enabling runtime checking of unit consistency
 in arithmetic operations between `YTArray` instances, and making it
 trivial to compose new units using algebraic operations.
