--- a/content/10.community_building.md
+++ b/content/10.community_building.md
@@ -1,4 +1,4 @@
-## Community Building
+## Community Building {#sec:community}
 
 Choosing a software package for a particular purpose involves evaluating
 several differentiating factors; these factors include the functionality of a
@@ -74,7 +74,7 @@ features), followed by partipating in development-focused discussion on mailing
 lists.  The next level of engagement typically involves the development of a
 new piece of functionality, refinement of existing code, or issuing a fix for a
 bug or issue.  These take the form of pull requests (described in greater
-detail in Section [@sec:development]) that can be reviewed and added to the
+detail [here](#sec:development)) that can be reviewed and added to the
 code base.
 
 The next level of engagement centers around tasks that are not fully-aligned
@@ -90,13 +90,13 @@ the software) motivation, and is thus a deeper level of engagement.
 
 The final two activities, drafting enhancement proposals and closing bug
 reports, are the most engaged, and often the most removed from the academic
-motivation structure.  Developing an enhancement proposal (see Section
-[@sec:development]) for `yt` means iterating with other developers on the
-motivation behind and implementation of a large piece of functionality; it
-requires both motivation to engage with the community and the patience to build
-consensus amongst stakeholders.  Closing bug reports -- and the development
-work associated with identifying, tracking and fixing bugs -- requires patience
-and often repeated engagement with stakeholders.
+motivation structure.  Developing an [enhancement proposal](#sec:ytep)  for
+`yt` means iterating with other developers on the motivation behind and
+implementation of a large piece of functionality; it requires both motivation
+to engage with the community and the patience to build consensus amongst
+stakeholders.  Closing bug reports -- and the development work associated with
+identifying, tracking and fixing bugs -- requires patience and often repeated
+engagement with stakeholders.
 
 ### Engagement Metrics
 
