--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -205,12 +205,12 @@ arrays might be created with inconsistent unit metadata. Once a unit
 object is created, it will not recieve updates if the original unit
 registry is modified.
 
-### Creating YTArray and YTQuantity instances {sec:creating-ytarray-and-ytquantity-instances}
+### Creating YTArray and YTQuantity instances {#sec:creating-ytarray-and-ytquantity-instances}
 
 There are two ways to create new array and quantity objects: via a constructor,
 and by multiplying scalar data by a unit quantity.
 
-#### Class Constructor {sec:class-constructor}
+#### Class Constructor {#sec:class-constructor}
 
 The primary internal interface for creating new arrays and quantities is through
 the class constructor for YTArray. The constructor takes three arguments. The
@@ -254,7 +254,7 @@ This example illustrates that the array is being created using
 `default_unit_registry`, for which `code_length` is
 equivalent to `cm`.
 
-#### Multiplication {sec:multiplication}
+#### Multiplication {#sec:multiplication}
 
 New `YTArray` and `YTQuantity` instances can also be created by
 multiplying `YTArray` or `YTQuantity` instances by `float`
@@ -292,7 +292,7 @@ Code units are tightly coupled to on-disk parameters. To handle this
 fact of life, the `yt` unit system can modify, add, and remove
 unit symbols via the `UnitRegistry`.
 
-#### Associating arrays with a coordinate system {sec:associating-arrays-with-a-coordinate-system}
+#### Associating arrays with a coordinate system {#sec:associating-arrays-with-a-coordinate-system}
 
 To create quantities and arrays in units defined by a simulation
 coordinate system, we associate a `UnitRegistry` instance with
@@ -310,7 +310,7 @@ the appropriate values and `length_unit`, `time_unit`,
 the `StaticOutput` instance. If there are frontend specific code
 units they should also be defined in subclasses by extending this function.
 
-#### Mixing modified unit registries {sec:mixing-modified-unit-registries}
+#### Mixing modified unit registries {#sec:mixing-modified-unit-registries}
 
 It becomes necessary to consider mixing unit registries whenever data
 needs to be compared between disparate datasets. The most
@@ -345,7 +345,7 @@ The examples below illustrate the consistency of this choice:
 ```
 
 For the last two examples, the answer is not the seemingly trivial
-$128^2\/=\/16384\,\rm{Mpccm}^2/h^2$. This is because the new quantity
+$128^2=16384,\rm{Mpccm}^2/h^2$. This is because the new quantity
 returned by the multiplication operation inherits the unit registry from
 the left object in binary operations. This convention is enforced for
 all binary operations on two `YTarray` objects. Results are
@@ -358,7 +358,7 @@ always consistent when referencing an unambiguous physical coordinate system:
 3.4783466935e+52 cm**2
 ```
 
-### Handling cosmological units {sec:handling-cosmological-units}
+### Handling cosmological units {#sec:handling-cosmological-units}
 
 If we detect that we are loading a cosmological simulation performed in comoving
 coordinates, extra comoving units are added to the dataset's unit
