Fixing URL citation

--- a/content/02.authorship_policy.md
+++ b/content/02.authorship_policy.md
@@ -6,6 +6,6 @@ ordered **somehow TBD**) and those that are members of the `yt` community.
 The authors from each group have been indicated in the respective author
 affiliations.
 
-This paper was developed collaboratively, using the Manubot [@url:
-https://github.com/greenelab/manubot] system for collaborating on and reviewing
-contributed text.
+This paper was developed collaboratively, using the Manubot
+[@url:https://github.com/greenelab/manubot] system for collaborating on and
+reviewing contributed text.
