Sketching out a few more sections

--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -1,1 +1,11 @@
 ## Visualization and Volume Rendering {#sec:vr}
+
+### Pixelizing Variable-Mesh Objects
+
+### Higher-Order Unstructured Mesh Elements
+
+### Software Volume Rendering
+
+### Hardware-accelerated Volume Rendering
+
+
