--- a/content/65.extensions.md
+++ b/content/65.extensions.md
@@ -15,4 +15,15 @@ processing and analyzing that data.
 
 ### ytree
 
+Building on `yt` for access to halo catalogs, and implementing a similar system
+for derived fields as applied to graph datasets, ytree
+[@doi:10.5281/zenodo.1174374] is a system for analyzing merger trees from
+analysis of dark matter halos in cosmological simulations.
 
+ytree provides flexibility in determining the path that a given analysis takes
+through the graph of merger trees; for instance, it enables the user to select
+if they wish to follow the "most massive" progenitor halo backwards in time, or
+even to set their own criteria for this.  Connecting this to the raw,
+unprocessed data from the simulation (such as the unsampled particle or cell
+content that comprises the halos) allows researchers to deepen and guide their
+analysis based on the physical characteristics of the merger history.
