Updating with a link to authorship

--- a/content/02.authorship_policy.md
+++ b/content/02.authorship_policy.md
@@ -9,3 +9,8 @@ affiliations.
 This paper was developed collaboratively, using the Manubot
 [@url:https://github.com/greenelab/manubot] system for collaborating on and
 reviewing contributed text.
+
+> 
+> To add yourself to the author list, please follow the instructions in our
+> [README](https://github.com/yt-project/yt-3.0-paper/blob/master/README.md#authorship-policy).
+> 
