Finishing intra-doc references

--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -48,9 +48,10 @@ sub-sections within the domain will require fewer files to be loaded.
 Figure @fig:files shows four examples of possible partitions of a
 two-dimensional spatial domain split equally between 8 files.
 
-![Examples of four different schemes for partitioning a 2D domain
-between 8 files. Each color represents a different
-file.](../images/bitmap/files.png){#fig:files}
+![
+Examples of four different schemes for partitioning a 2D domain between 8 files.
+Each color represents a different file.
+](images/bitmap/files.png){#fig:files}
 
 Panel (a) is an example where random parts of the domain are contained
 within each file. In such a case, many files will need to be loaded for
@@ -68,9 +69,7 @@ Consequently, Hilbert curves have also been used for load-balancing in
 parallel simulation codes like Gadget-2 [@Springel2005b] and RAMSES
 [@Teyssier2001].
 
-Figure [4](#fig:selectors){reference-type="ref"
-reference="fig:selectors"} shows examples of three selections within the
-above domain partitions.
+Figure @fig:selectors shows examples of three selections within the above domain partitions.
 
 ![
 Examples of file selection for four different domain partitions and three different shaded selectors.
@@ -138,7 +137,7 @@ forms a space filling Z-curve.
 ![
 Example of 3rd order Morton curve in two dimensions.
 The bits of the $x$ and $y$ indices are interleaved to generate a single integer that fully describes the cell's location within the two-dimensional domain to within $1/2^{3}$th of the domain in each dimension.
-](../images/zorder.png){#fig:zorder}
+](images/bitmap/zorder.png){#fig:zorder}
 
 The precision of a single Morton index is only limited by the size of
 the integer used to store it. For instance, 64-bit Morton indices in 3
@@ -381,12 +380,8 @@ to be loaded during analysis of a selected region and the overall
 fraction of time spent on I/O will be lower. If less time is required to
 identify the files touched by a given selector, more selections can be
 made using the same computational resources. This was done for varying
-index orders (§[4.1](#SS:test_order){reference-type="ref"
-reference="SS:test_order"}), selector sizes
-(§[4.2](#SS:test_size){reference-type="ref" reference="SS:test_size"}),
-and partitions of the domain between files
-(§[4.3](#SS:test_decomp){reference-type="ref"
-reference="SS:test_decomp"}).
+index orders (Section @SS:test_order), selector sizes (Section @SS:test_size),
+and partitions of the domain between files (Section @SS:test_decomp).
 
 Index Order {#SS:test_order}
 -----------
@@ -396,9 +391,8 @@ Index Order {#SS:test_order}
 The order of the Morton indices used to map the files determines the
 time required to identify files and the number of collisions that will
 occur between files. Higher order indices will result in fewer
-collisions, but will take longer to query, as seen in Figure
-[\[fig:test\_order1\]](#fig:test_order1){reference-type="ref"
-reference="fig:test_order1"}. Six selectors of varying sizes and
+collisions, but will take longer to query, as seen in Figure @fig:test_order1
+Six selectors of varying sizes and
 positions within the domain where used to identify files based on Morton
 index bitmaps of varying order. The test dataset was split across the
 files using a Hilbert curve of order 6 with 10% scatter between Hilbert
@@ -406,17 +400,12 @@ cells to simulate an imperfect domain decomposition as can occur if
 particle positions are updated and output prior to updating the domain
 decomposition.
 
-![Dependence of query time (top), fraction of files selected/cells with
-collisions (middle), and index size (bottom) on the total refinement of
-the bitmap index. The solid black lines correspond to the query times
-and files identified by just the selectors. The dashed blue lines
-correspond to the query times and additional files selected when a ghost
-zone with the width of one Morton cell is added around the selectors.
-The dash-dotted line in the middle panel shows the fraction of cells
-with collisions between
-files.](../images/lang7.png){width="\\columnwidth"}
-
-[\[fig:test\_order1\]]{#fig:test_order1 label="fig:test_order1"}
+![
+Dependence of query time (top), fraction of files selected/cells with collisions (middle), and index size (bottom) on the total refinement of the bitmap index.
+The solid black lines correspond to the query times and files identified by just the selectors.
+The dashed blue lines correspond to the query times and additional files selected when a ghost zone with the width of one Morton cell is added around the selectors.
+The dash-dotted line in the middle panel shows the fraction of cells with collisions between files.
+](images/bitmap/vary_order1_or0png){#fig:test_order1}
 
 Below a bitmap index order of 4, there are collisions between multiple
 files within every cell, resulting in a larger number of files being
@@ -433,9 +422,8 @@ filling curve. While it is generally true that the time required to
 identify files using a bitmap index will increase exponentially with the
 size of the index, the order of the index that results in the minimal
 number of files for any dataset will depend upon how the domain is
-partitioned between files (see
-§[4.3](#SS:test_decomp){reference-type="ref"
-reference="SS:test_decomp"}). The memory required to store the index for
+partitioned between files (see Section @SS:test_decomp).
+The memory required to store the index for
 the test dataset scales according to $\propto2^{2k}$, for a
 $k^{\mbox{th}}$ order index. If uncompressed bitmaps had been used
 instead of EWAH compressed bitmap, the memory would have scaled with the
@@ -445,8 +433,7 @@ total number of cells contained within the 3-dimensional test domain
 ### Collision Refinement {#SSS:test_order2}
 
 Increasing the refinement of the primary index does so for the entire
-domain and, as seen in §[4.1.1](#SSS:test_order1){reference-type="ref"
-reference="SSS:test_order1"}, can become costly in terms of the memory
+domain and, as seen in Section @SSS:test_order1, can become costly in terms of the memory
 required to store the bitmap and the time required to perform
 operations. However, it is also possible to increase refinement by
 nesting a second Morton bitmap index within those cells of the primary
@@ -457,25 +444,17 @@ entire domain. This enhanced compression mean that, although a greater
 overall number of EWAH compressed bitmaps will need to be utilized (one
 for the coarse index and one for each collision within the coarse
 index), less space will be needed to store the bitmap and bitwise
-operations will be faster. Figure
-[\[fig:test\_order2\]](#fig:test_order2){reference-type="ref"
-reference="fig:test_order2"} shows the results for adding a secondary
+operations will be faster. Figure @fig:test_order2
+shows the results for adding a secondary
 index of varying order with the overall refinement order of the index
 (primary index order + secondary index order) held constant at 6. The
 test dataset and selectors applied were the same as in
-§[4.1.1](#SSS:test_order1){reference-type="ref"
-reference="SSS:test_order1"}.
+Section @SSS:test_order1.
 
-![Dependence of query time (top), fraction of files selected/cells with
-collisions (middle), and memory required to store the index (bottom) on
-the order of the secondary index used to refine collisions. In the
-middle panel, the solid black line corresponds with the fraction of
-files identified, the dash-dotted blue line is the fraction of cells at
-the first index level that have collisions, and the dotted red line is
-the fraction of cells at the second index level that have
-collisions.](../images/lang8.png){width="\\columnwidth"}
-
-[\[fig:test\_order2\]]{#fig:test_order2 label="fig:test_order2"}
+![
+Dependence of query time (top), fraction of files selected/cells with collisions (middle), and memory required to store the index (bottom) on the order of the secondary index used to refine collisions.
+In the middle panel, the solid black line corresponds with the fraction of files identified, the dash-dotted blue line is the fraction of cells at the first index level that have collisions, and the dotted red line is the fraction of cells at the second index level that have collisions.
+](images/bitmap/vary_order2_to6.png){#fig:test_order2}
 
 When the order of the second refined index is low, the first index is
 larger resulting in fewer cells with collisions at the first index and
@@ -507,24 +486,19 @@ Selector Size {#SS:test_size}
 The time required to identify files touched by a selection will also
 depend upon the size of the region being selected. Larger selectors will
 intersect more indices and more files, resulting in more bitmap
-operations. Figure
-[\[fig:test\_size\]](#fig:test_size){reference-type="ref"
-reference="fig:test_size"} shows the result from varying the selector
-size. The same test data set from
-§[4.1](#SS:test_order){reference-type="ref" reference="SS:test_order"}
+operations. Figure @fig:test_size
+shows the result from varying the selector
+size. The same test data set from Section @SS:test_order
 was used. A bitmap index with a 4th order primary Morton index and 2nd
 order secondary Morton index was used in all cases. Each cube selector
 was placed at the center of the domain and scaled along each dimension
 to some fraction of the total domain.
 
-![Dependence of query time (top) and number of files selected (bottom)
-on selector width in terms of the total domain width. The solid black
-lines correspond to the query times and files identified by the
-selectors alone. The dashed blue lines correspond the query times and
-additional files identified when a ghost zone with a width of one cell
-is added to the selector.](../images/lang9.png){width="\\columnwidth"}
-
-[\[fig:test\_size\]]{#fig:test_size label="fig:test_size"}
+![
+Dependence of query time (top) and number of files selected (bottom) on selector width in terms of the total domain width.
+The solid black lines correspond to the query times and files identified by the selectors alone.
+The dashed blue lines correspond the query times and additional files identified when a ghost zone with a width of one cell is added to the selector.
+](images/bitmap/vary_selector.png){#fig:test_size}
 
 As the selector increases in size, it touches a greater number of files,
 resulting in longer query times. The number of files touched increases
@@ -545,18 +519,15 @@ is not the case.
 Domain Partitioning {#SS:test_decomp}
 -------------------
 
-As discussed in §[2.1](#SS:decomp){reference-type="ref"
-reference="SS:decomp"}, a bitmap index is more effective in cases where
+As discussed in Section @SS:decomp, a bitmap index is more effective in cases where
 the domain is partitioned between files in a localized way. If files
 contain non-contiguous parts of the domain, contiguous selections will
-require more files to be loaded. Figure
-[\[fig:test\_decomp\]](#fig:test_decomp){reference-type="ref"
-reference="fig:test_decomp"} shows results for four different
+require more files to be loaded. Figure @fig:test_decomp
+shows results for four different
 partitioning schemes. All four data sets cover the same
 three-dimensional domain with $1024^3$ points split across 512 files.
 The Hilbert dataset is the same one used in previous tests (see
-§[4.1](#SS:test_order){reference-type="ref" reference="SS:test_order"}
-for a description). The Morton dataset is constructed in a similar way
+Section @SS:test_order for a description). The Morton dataset is constructed in a similar way
 to the Hilbert dataset with file partitions occurring along a 6th order
 Morton curve and including a 10% scatter of points between Morton cells.
 The sliced dataset is partitioned in slices along one dimension with 10%
@@ -564,16 +535,10 @@ scatter of points between adjacent slices. Files in the random dataset
 contain a random sample of points, uniformly distributed across the
 domain.
 
-![Dependence of query time (top), the number of files selected (middle),
-and the size of the index (bottom) on index order for different domain
-partitioning between files. The dotted magenta lines are for a randomly
-partitioned dataset, the cyan dashed-dotted lines are a dataset
-partitioned by equal slices alone one dimension, the dashed red lines
-are a dataset partitioned along an 6th order Morton curve, and the solid
-blue lines are a dataset partitioned along a 6th order Hilbert
-curve.](../images/lang10.png){width="\\columnwidth"}
-
-[\[fig:test\_decomp\]]{#fig:test_decomp label="fig:test_decomp"}
+![
+Dependence of query time (top), the number of files selected (middle), and the size of the index (bottom) on index order for different domain partitioning between files.
+The dotted magenta lines are for a randomly partitioned dataset, the cyan dashed-dotted lines are a dataset partitioned by equal slices alone one dimension, the dashed red lines are a dataset partitioned along an 6th order Morton curve, and the solid blue lines are a dataset partitioned along a 6th order Hilbert curve.
+](images/bitmap/vary_decomp_to0.png){#fig:test_decomp}
 
 Many more files are identified for the random dataset than those
 datasets with localized partitioning of the domain. Above an order of 3,
