--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -603,7 +603,7 @@ three-dimensional spatial datasets like those produced by astrophysical
 simulations, the same methods can be applied to non-spatial datasets
 with arbitrary dimensionality.
 
-Code {#S:code .unnumbered}
+Code {#S:code}
 ====
 
 These procedures have been implemented as part of the yt python package
